--- a/src/styles.css
+++ b/src/styles.css
@@ -53,6 +53,12 @@ body {
   margin-bottom: 2rem;
 }
 
+.App-playlist {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .App-search-input {
   width: 100%;
   padding: 0.75rem;
